# api-docs.json
@@ -1984,205 +1984,6 @@
         ]
       }
     },
-    "/courses": {
-      "post": {
-        "operationId": "CoursesController_create",
-        "parameters": [],
-        "requestBody": {
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/CreateCourseDto"
-              }
-            }
-          }
-        },
-        "responses": {
-          "201": {
-            "description": "The course has been successfully created",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/CourseResponseDto"
-                }
-              }
-            }
-          },
-          "500": {
-            "description": "Internal server error"
-          }
-        },
-        "summary": "Create a new course",
-        "tags": [
-          "Courses"
-        ]
-      },
-      "get": {
-        "operationId": "CoursesController_findAll",
-        "parameters": [
-          {
-            "name": "take",
-            "required": true,
-            "in": "query",
-            "schema": {
-              "type": "number"
-            }
-          },
-          {
-            "name": "page",
-            "required": true,
-            "in": "query",
-            "schema": {
-              "type": "number"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Successfully received paginated response",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "allOf": [
-                    {
-                      "$ref": "#/components/schemas/PaginatedResponseDto"
-                    },
-                    {
-                      "properties": {
-                        "data": {
-                          "type": "array",
-                          "items": {
-                            "$ref": "#/components/schemas/CourseResponseDto"
-                          }
-                        }
-                      }
-                    }
-                  ]
-                }
-              }
-            }
-          },
-          "500": {
-            "description": "Internal server error"
-          }
-        },
-        "summary": "Get all courses",
-        "tags": [
-          "Courses"
-        ]
-      }
-    },
-    "/courses/{id}": {
-      "get": {
-        "operationId": "CoursesController_findOne",
-        "parameters": [
-          {
-            "name": "id",
-            "required": true,
-            "in": "path",
-            "schema": {
-              "type": "number"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "The course has been successfully retrieved",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/CourseResponseDto"
-                }
-              }
-            }
-          },
-          "404": {
-            "description": "Course not found"
-          },
-          "500": {
-            "description": "Internal server error"
-          }
-        },
-        "summary": "Get course by ID",
-        "tags": [
-          "Courses"
-        ]
-      },
-      "patch": {
-        "operationId": "CoursesController_update",
-        "parameters": [
-          {
-            "name": "id",
-            "required": true,
-            "in": "path",
-            "schema": {
-              "type": "number"
-            }
-          }
-        ],
-        "requestBody": {
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/UpdateCourseDto"
-              }
-            }
-          }
-        },
-        "responses": {
-          "200": {
-            "description": "The course has been successfully updated",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/CourseResponseDto"
-                }
-              }
-            }
-          },
-          "404": {
-            "description": "Course not found"
-          },
-          "500": {
-            "description": "Internal server error"
-          }
-        },
-        "summary": "Update a course by ID",
-        "tags": [
-          "Courses"
-        ]
-      },
-      "delete": {
-        "operationId": "CoursesController_remove",
-        "parameters": [
-          {
-            "name": "id",
-            "required": true,
-            "in": "path",
-            "schema": {
-              "type": "number"
-            }
-          }
-        ],
-        "responses": {
-          "204": {
-            "description": "The course has been successfully deleted"
-          },
-          "404": {
-            "description": "Course not found"
-          },
-          "500": {
-            "description": "Internal server error"
-          }
-        },
-        "summary": "Delete a course by ID",
-        "tags": [
-          "Courses"
-        ]
-      }
-    },
     "/students": {
       "post": {
         "operationId": "StudentsController_create",
@@ -5006,49 +4807,6 @@
           "cidade",
           "uf"
         ]
-      },
-      "CreateCourseDto": {
-        "type": "object",
-        "properties": {
-          "name": {
-            "type": "string",
-            "example": "Carlos Santos"
-          }
-        },
-        "required": [
-          "name"
-        ]
-      },
-      "CourseResponseDto": {
-        "type": "object",
-        "properties": {
-          "id": {
-            "type": "number",
-            "example": 1
-          },
-          "name": {
-            "type": "string",
-            "example": "Programming 101"
-          },
-          "activeClassesCount": {
-            "type": "number",
-            "example": 3,
-            "description": "Number of active classes (EM_FORMACAO and EM_ANDAMENTO status)"
-          }
-        },
-        "required": [
-          "id",
-          "name"
-        ]
-      },
-      "UpdateCourseDto": {
-        "type": "object",
-        "properties": {
-          "name": {
-            "type": "string",
-            "example": "Carlos Santos"
-          }
-        }
       },
       "CreateStudentDto": {
         "type": "object",
