# src/courses/dto/create-course.dto.ts
@@ -1,9 +1,0 @@
-import { ApiProperty } from '@nestjs/swagger';
-import { IsNotEmpty, IsString } from 'class-validator';
-
-export class CreateCourseDto {
-  @ApiProperty({ type: String, example: 'Carlos Santos' })
-  @IsNotEmpty({ message: 'Name is required' })
-  @IsString({ message: 'Name must be a string' })
-  name: string;
-}
